--- a/HTML Structure/05_SimpleWebsite/simple-website.html
+++ b/HTML Structure/05_SimpleWebsite/simple-website.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <link rel="stylesheet" href="page-content.css">
+    <link rel="stylesheet" href="simple-website.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Content</title>
+    <title>simple website</title>
 </head>
-
 <body>
+    <nav>
+        <ul>
+            <li><a href="/home.html">Home</a></li>
+            <li><a href="/tutorials.html">Tutorials</a></li>
+            <li><a href="/abaout.html">About</a></li>
+            <li><a href="/newsletter.html">Newsletter</a></li>
+            <li><a href="/contact.html">Contact</a></li>
+        </ul>
+    </nav>
+
     <section>
         <article>
             <header>
@@ -24,9 +32,12 @@
                 <h1>My First Blog Entry</h1>
                 <p class="paragraph-italic">Written by Christina on January 10th</p>
             </header>
-            <p class="size24">I’m so happy to write my first blog entry – yay!</p>
+            <p class="paragraph-size24">I’m so happy to write my first blog entry – yay!</p>
         </article>
     </section>
-</body>
 
+    <footer>
+        <p>&copy; Copyright 2021 Christina </p>
+    </footer>
+</body>
 </html>
