--- a/CSS & Typography/04_Buttons-css/index.html
+++ b/CSS & Typography/04_Buttons-css/index.html
@@ -11,20 +11,20 @@
     <article class="first-row">
     <h2>Normal Buttons</h2>
     <a class="button">Learn More</a>
-    <button class="button fill">Learn More</button>
-    <button class="button fill hover">Learn More</button>
+    <button class="button">Learn More</button>
+    <button class="button hover">Learn More</button>
 </article>
 
 <article class="second-row">
     <h2>Filled Buttons</h2>
-    <a class="button">Learn More</a>
+    <a class="button fill">Learn More</a>
     <button class="button fill">Learn More</a></button>
     <button class="button fill hover">Learn More</a></button>
 </article>
 
 <article class="third-row">
     <h2>Filled Buttons</h2>
-    <a class="button"><i class="fas fa-arrow-down"></i>Download</a>
+    <a class="button fill"><i class="fas fa-arrow-down"></i>Download</a>
     <button class="button fill"><i class="fas fa-arrow-down"></i>Download</a></button>
     <button class="button fill hover"><i class="fas fa-arrow-down"></i>Download</a></button>
 </article>
