--- a/HTML Structure/05_SimpleWebsite/simple-website.html
+++ b/HTML Structure/05_SimpleWebsite/simple-website.html
@@ -24,7 +24,7 @@
                 <h1>Just Another Day</h1>
                 <p class="paragraph-italic">Written by Christina on January 11th</p>
             </header>
-            <p class="size24">This is my second blog entry, and I just wanted to check in on you.</p>
+            <p class="paragraph-size24">This is my second blog entry, and I just wanted to check in on you.</p>
         </article>
 
         <article>
