--- a/Exercise Position & Grid/04_Navigation-float/index.html
+++ b/Exercise Position & Grid/04_Navigation-float/index.html
@@ -10,7 +10,9 @@
   <body>
     
     <header class="header">
-      <p class="title">SITE TITLE</p>
+      <div class="title-container">
+       <p class="title">SITE TITLE</p> 
+      </div>
       <nav>
         <ul>
           <li><a href="#">Home</a></li>
@@ -23,12 +25,15 @@
     </header>
 
     <main>
-      <article>
+      <article class="artical1">
         <header class="main">
           <h1>Heading level 1</h1>
+          <div class="img1-container">
           <img class="img1" src="images/second-image.jpg" alt="" />
+          </div>
         </header>
-        <p>
+
+        <p class="level1">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
           tempus lorem nibh, quis vehicula quam eleifend vel. Sed sagittis urna
           a commodo fermentum. Donec fringilla volutpat mi, non ultrices dolor
@@ -39,7 +44,7 @@
           facilisis nibh, a tincidunt lectus. Duis interdum nibh quis porttitor
           facilisis. In sit amet nulla sed nibh tristique iaculis eu nec metus.
         </p>
-        <p>
+        <p class="level1"></p>
           Aliquam hendrerit egestas orci, at sollicitudin lectus mattis eu. Nunc
           elementum congue sagittis. Praesent in tempus nisl. Vestibulum
           consequat dapibus arcu, in ornare felis gravida et. Vestibulum ut diam
@@ -53,10 +58,10 @@
           posuere luctus libero et sodales. Donec posuere pharetra efficitur.
         </p>
       </article>
+
       <article>
         <h1>Heading level 2</h1>
-
-        <p>
+        <p class="level2">
           Aliquam erat volutpat. Donec sodales malesuada purus, a gravida ipsum
           molestie ac. Donec ac luctus leo, eget lobortis sapien. Quisque
           ultricies egestas ipsum, tempor porta nulla facilisis eu. Sed
@@ -72,16 +77,23 @@
           feugiat, quis finibus magna blandit.
         </p>
 
-        <blockquote>
-          <p>
+          <blockquote>
             Proin sit amet est vitae mi porttitor rhoncus sed nec neque.
             Praesent metus quam, sagittis eu mauris a, pellentesque suscipit
             justo. In varius tortor a ante feugiat, quis finibus magna blandit.
-          </p>
-          <p>Author Name</p>
-        </blockquote>
+            <p class="author-name">Author Name</p>
+          </blockquote>
 
-        <p>
+          <p class="level2">
+            Phasellus dictum interdum efficitur. Maecenas eleifend sapien felis, quis i
+            nterdum ex tempor a. Aenean sodales, eros ac fermentum elementum, enim nisi fini
+            bus nisi, sed tempus turpis mauris ac quam. Aenean ac leo vel ante sollicitudin 
+            consequat in ut augue. Vestibulum ante ipsum primis in faucibus orci luctus et u
+            ltrices posuere cubilia Curae; Duis sodales odio diam. Phasellus ultricies fauc
+            ibus massa sit amet pharetra.
+          </p>
+
+        <p class="level2">
           Sed fermentum viverra tortor ut lacinia. Pellentesque habitant morbi
           tristique senectus et netus et malesuada fames ac turpis egestas. Duis
           eleifend ut ligula quis lacinia. Ut sit amet est quis ipsum tristique
@@ -94,19 +106,20 @@
           feugiat, quis finibus magna blandit.
         </p>
       </article>
+
       <article>
         <h1>Heading level 2</h1>
 
         <img class="img2" src="images/first-image.jpg" alt="" />
 
-        <p class="test">
+        <p class="level3">
           Ut vitae tristique magna. In hac habitasse platea dictumst. Aliquam
           tempor dolor in ante porta, quis convallis metus laoreet. Ut a magna
           mauris. Vestibulum blandit ante vitae felis gravida hendrerit. Nulla
           eleifend vel diam non viverra. Nullam at maximus mi. Integer luctus
           quis felis vitae ornare. Ut eu consequat libero.
         </p>
-        <p class="test">
+        <p class="level3">
           Maecenas eleifend sapien felis, quis interdum ex tempor a. Aenean
           sodales, eros ac fermentum elementum, enim nisi finibus nisi, sed
           tempus turpis mauris ac quam. Aenean ac leo vel ante sollicitudin
